--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@ main.active {
     transition: 1s;
     filter: blur(19px);
     overflow: hidden;
+    pointer-events: none;
 }
 
 ul.active {
@@ -208,6 +209,34 @@ tr {
 
 th {
     background: var(--BG);
+}
+
+tr:hover .overlay {
+    width: 100px;
+    opacity: 1;
+}
+
+tr {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 0;
+    left: 100;
+    right: 0;
+    background-color: rgb(183, 73, 73);
+    width: 0px;
+    height: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay:hover {
+    cursor: pointer;
 }
 
 /* ANIMATIONS */
