--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,420 +1,416 @@
-@import url('https://fonts.cdnfonts.com/css/bahnschrift');
+@import url("https://fonts.cdnfonts.com/css/bahnschrift");
 
 :root {
-    --BG: #0E0C16;
-    --TEXT-COLOR: #FAF8FF;
-    --MAIN-COLOR: #8685F0;
-    --SECOND-PURPLE: #5C598A;
-    --READY-COLOR: #91ffa0;
-    --WAITING-COLOR: #a83554;
-    --DARK: #222137;
+  --BG: #0e0c16;
+  --TEXT-COLOR: #faf8ff;
+  --MAIN-COLOR: #8685f0;
+  --SECOND-PURPLE: #5c598a;
+  --READY-COLOR: #91ffa0;
+  --WAITING-COLOR: #a83554;
+  --DARK: #222137;
 }
 
 /* GENERAL STYLING */
 * {
-    box-sizing: border-box;
-    font-family: 'Bahnschrift', sans-serif;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  font-family: "Bahnschrift", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background: var(--BG);
-    color: var(--TEXT-COLOR);
+  background: var(--BG);
+  color: var(--TEXT-COLOR);
 }
-
 hr {
-    border: none;
-    height: 1px;
-    background: rgba(255, 255, 255, 0.5);
-    width: 90vw;
-    margin: 0 auto;
+  border: none;
+  height: 1px;
+  background: rgba(255, 255, 255, 0.5);
+  width: 90vw;
+  margin: 0 auto;
 }
 
 /* NAV STYLING */
 
 header {
-    display: flex;
-    flex-direction: column;
-    height: 45px;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  height: 45px;
+  justify-content: center;
 }
 
 nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 ul {
-    align-self: center;
-    display: none;
-    list-style: none;
-    position: absolute;
-    top: 46px;
-    width: 90vw;
-    z-index: 1;
+  align-self: center;
+  display: none;
+  list-style: none;
+  position: absolute;
+  top: 46px;
+  width: 90vw;
+  z-index: 1;
 }
 
 ul li {
-    animation: slideIn .5s;
-    background: rgba(0, 0, 0, 0.75);
-    font-size: 25px;
-    height: 75px;
-    white-space: nowrap;
-    ;
+  animation: slideIn 0.5s;
+  background: rgba(0, 0, 0, 0.75);
+  font-size: 25px;
+  height: 75px;
+  white-space: nowrap;
 }
 
 ul li a {
-    align-items: center;
-    color: var(--TEXT-COLOR);
-    display: flex;
-    gap: 25px;
-    height: 100%;
-    padding-left: 15px;
-    text-decoration: none;
-
+  align-items: center;
+  color: var(--TEXT-COLOR);
+  display: flex;
+  gap: 25px;
+  height: 100%;
+  padding-left: 15px;
+  text-decoration: none;
 }
 
 ul li a:hover {
-    background: var(--SECOND-PURPLE);
+  background: var(--SECOND-PURPLE);
 }
 
 /* HAMBURGER MENU STYLING */
 
 .hamburger-menu {
-    height: 20px;
-    width: 25px;
-    align-self: flex-end;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    margin-right: 15px;
+  height: 20px;
+  width: 25px;
+  align-self: flex-end;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-right: 15px;
 }
 
 .bar {
-    background: white;
-    border-radius: 5px;
-    height: 2px;
-    position: absolute;
-    transition: .5s;
-    width: 25px;
+  background: white;
+  border-radius: 5px;
+  height: 2px;
+  position: absolute;
+  transition: 0.5s;
+  width: 25px;
 }
 
 .bar:first-child {
-    transform: translateY(-6px);
+  transform: translateY(-6px);
 }
 
 .bar:nth-child(3) {
-    transform: translateY(6px);
+  transform: translateY(6px);
 }
 
 .hamburger-menu:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* IF NAV IS ACTIVE*/
 body.active {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 main.active {
-    transition: 1s;
-    filter: blur(19px);
-    overflow: hidden;
-    pointer-events: none;
+  transition: 1s;
+  filter: blur(19px);
+  overflow: hidden;
+  pointer-events: none;
 }
 
 ul.active {
-    display: block;
+  display: block;
 }
 
 /* MAIN STYLING */
 .test-box {
-    align-items: center;
-    background: var(--MAIN-COLOR);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    height: max(200px, calc(100vh - 145px));
-    justify-content: center;
-    margin: 50px auto;
-    padding: 0px 15px;
-    text-align: center;
-    text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5);
-    width: 90%;
+  align-items: center;
+  background: var(--MAIN-COLOR);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  height: max(200px, calc(100vh - 145px));
+  justify-content: center;
+  margin: 50px auto;
+  padding: 0px 15px;
+  text-align: center;
+  text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5);
+  width: 90%;
 
-    /* USER SELECTING*/
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -ms-user-select: none;
+  /* USER SELECTING*/
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -ms-user-select: none;
 }
 
 .test-box.waiting {
-    background: var(--WAITING-COLOR);
+  background: var(--WAITING-COLOR);
 }
 
 .test-box.ready {
-    background: var(--READY-COLOR);
-    color: var(--DARK);
+  background: var(--READY-COLOR);
+  color: var(--DARK);
 }
 
 .ready-box-color {
-    color: var(--READY-COLOR);
+  color: var(--READY-COLOR);
 }
 
 .average-score {
-    text-shadow: none;
-    color: var(--SECOND-PURPLE);
-    font-weight: 900;
+  text-shadow: none;
+  color: var(--SECOND-PURPLE);
+  font-weight: 900;
 }
 
 #highscore {
-    text-align: center;
+  text-align: center;
 }
 
 /* TABLE STYLING */
 
 table {
-    font-size: 1.5rem;
-    height: 95%;
-    margin: 50px auto;
-    width: 90%;
+  font-size: 1.5rem;
+  height: 95%;
+  margin: 50px auto;
+  width: 90%;
 }
 
 td {
-    text-align: center;
+  text-align: center;
 }
 
 tr:nth-child(even) {
-    background-color: #323058;
+  background-color: #323058;
 }
 
 tr:nth-child(odd) {
-    background-color: #4A4983;
+  background-color: #4a4983;
 }
 
 table,
 td,
 tr {
-    border: none;
-    border-collapse: separate;
-    border-spacing: 0px;
-    padding: 15px;
+  border: none;
+  border-collapse: separate;
+  border-spacing: 0px;
+  padding: 15px;
 }
 
 th {
-    background: var(--BG);
+  background: var(--BG);
 }
 
 tr:hover .overlay {
-    width: 100px;
-    opacity: 1;
+  width: 100px;
+  opacity: 1;
 }
 
 tr:hover {
-    background-color: rgba(50, 48, 88, 0.54)
+  background-color: rgba(50, 48, 88, 0.54);
 }
 
 tr {
-    position: relative;
+  position: relative;
 }
 
 .overlay {
-    position: absolute;
-    bottom: 0;
-    left: 100;
-    right: 0;
-    background-color: rgb(183, 73, 73);
-    width: 0px;
-    height: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 100;
+  right: 0;
+  background-color: rgb(183, 73, 73);
+  width: 0px;
+  height: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .overlay:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* SETTINGS POPUP */
 
 .settings-popup-background {
-    width: 100%;
-    height: 100%;
-    display: none;
-    background-color: rgba(0, 0, 0, 0.75);
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    position: absolute;
-    z-index: 1;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100vh;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.75);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
 }
 
 .settings-popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--SECOND-PURPLE);
-    border-radius: 20px;
-    height: 70%;
-    width: 80%;
-    z-index: 2;
-    text-align: center;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--SECOND-PURPLE);
+  border-radius: 20px;
+  height: 70%;
+  width: 80%;
+  z-index: 2;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  display: none;
 }
 
 .settings-popup .settings {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
 }
 
 .settings-popup button {
-    border: 0;
-    width: 50%;
-    height: 50px;
-    font-size: 1.5rem;
-    border-radius: 20px;
-    font-weight: 600;
-    box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 30px;
+  border: 0;
+  width: 50%;
+  height: 50px;
+  font-size: 1.5rem;
+  border-radius: 20px;
+  font-weight: 600;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 30px;
 }
 
 #reset-settings-btn {
-    background: rgb(0, 0, 0);
-    color: white;
+  background: rgb(0, 0, 0);
+  color: white;
 }
 
 .settings-popup button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 input[type="color"] {
-    appearance: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    background: none;
-    border: 0;
-    height: 50px;
-    width: 50px;
-    cursor: pointer;
-    padding: 0;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background: none;
+  border: 0;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  padding: 0;
 }
 
 .settings-popup-background.active,
 .settings-popup.active {
-    display: flex;
+  display: flex;
 }
 
 /* ANIMATIONS */
 
 @keyframes slideIn {
-    0% {
-        height: 0px;
-        opacity: 0;
-    }
+  0% {
+    height: 0px;
+    opacity: 0;
+  }
 
-    100% {
-        opacity: 1;
-    }
-
+  100% {
+    opacity: 1;
+  }
 }
 
 .hamburger-menu.active .bar:nth-child(2) {
-    opacity: 0;
+  opacity: 0;
 }
 
 .hamburger-menu.active .bar:first-child {
-    position: absolute;
-    transform: rotate(-45deg);
-    margin-bottom: 0;
+  position: absolute;
+  transform: rotate(-45deg);
+  margin-bottom: 0;
 }
 
 .hamburger-menu.active .bar:nth-child(3) {
-    position: absolute;
-    transform: rotate(45deg);
-    margin-bottom: 0;
+  position: absolute;
+  transform: rotate(45deg);
+  margin-bottom: 0;
 }
 
 /* MEDIA */
 
 @media screen and (min-width: 768px) {
+  /* GENERAL STYLING */
+  body {
+    font-size: 2rem;
+  }
 
-    /* GENERAL STYLING */
-    body {
-        font-size: 2rem;
-    }
+  /* NAV STYLING */
 
-    /* NAV STYLING */
+  ul {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    top: 0;
+  }
 
-    ul {
-        display: flex;
-        justify-content: center;
-        margin: 0 auto;
-        top: 0;
-    }
+  ul li,
+  header {
+    height: 95px;
+  }
 
-    ul li,
-    header {
-        height: 95px;
-    }
+  ul li {
+    background: transparent;
+  }
 
-    ul li {
-        background: transparent;
-    }
+  header img {
+    display: none;
+  }
 
-    header img {
-        display: none;
-    }
+  ul li a {
+    border: none;
+    color: #95949a;
+    padding: 0 50px;
+    text-transform: uppercase;
+    transition: 1s;
+  }
 
-    ul li a {
-        border: none;
-        color: #95949A;
-        padding: 0 50px;
-        text-transform: uppercase;
-        transition: 1s;
-    }
+  ul li a:hover {
+    background: none;
+    color: var(--TEXT-COLOR);
+    border-image: linear-gradient(
+        to top,
+        rgba(255, 255, 255, 0.5),
+        rgba(0, 0, 0, 0)
+      )
+      2 150%;
+    border-style: solid;
+    border-width: 1px;
+  }
 
-    ul li a:hover {
-        background: none;
-        color: var(--TEXT-COLOR);
-        border-image: linear-gradient(to top,
-                rgba(255, 255, 255, 0.5),
-                rgba(0, 0, 0, 0)) 2 150%;
-        border-style: solid;
-        border-width: 1px;
+  /* HAMBURGER MENU STYLING */
+  .hamburger-menu {
+    display: none;
+  }
 
-    }
+  /* MAIN STYLING */
+  .test-box {
+    border-radius: 0px;
+    height: max(200px, calc(100vh - 295px));
+    margin: 100px 0;
+    width: 100%;
+  }
 
-    /* HAMBURGER MENU STYLING */
-    .hamburger-menu {
-        display: none;
-    }
-
-    /* MAIN STYLING */
-    .test-box {
-        border-radius: 0px;
-        height: max(200px, calc(100vh - 295px));
-        margin: 100px 0;
-        width: 100%;
-    }
-
-    /* SETTINGS POPUP */
-    .settings-popup button {
-        width: 350px;
-    }
-
+  /* SETTINGS POPUP */
+  .settings-popup button {
+    width: 350px;
+  }
 }
