--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -173,6 +173,21 @@ ul.active {
   text-align: center;
 }
 
+.new-test-btn {
+  border: 0;
+  width: 200px;
+  height: 50px;
+  font-size: 1.5rem;
+  border-radius: 20px;
+  font-weight: 600;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 30px;
+  background-color: #fefedf;
+}
+.new-test-btn:hover {
+  cursor: pointer;
+  background-color: #ffffc7;
+}
+
 /* TABLE STYLING */
 
 table {
